// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callout can render a Callout with variant danger 1`] = `
<body>
  <div>
    <aside
      class="c-dXzGmz c-dXzGmz-jVzdYt-variant-danger"
    >
      <div
        class="c-jBmcOA c-jBmcOA-deNlpD-variant-danger"
      >
        <svg
          class="c-PJLV c-PJLV-bHjGOQ-variant-default c-PJLV-hKgDZV-outline-true c-PJLV-jnsSHc-size-5"
          fill="none"
          height="22"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Alert
          </title>
          <desc>
            An icon representing an exclamation mark in an octogone
          </desc>
          <polygon
            points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </div>
      Test
    </aside>
  </div>
</body>
`;

exports[`Callout can render a Callout with variant danger 2`] = `
<body>
  <div>
    <aside
      class="c-dXzGmz c-dXzGmz-jVzdYt-variant-danger"
    >
      <div
        class="c-dxxjkH c-dxxjkH-deNlpD-variant-danger"
      >
        Test Label
      </div>
      Test
    </aside>
  </div>
</body>
`;

exports[`Callout can render a Callout with variant info 1`] = `
<body>
  <div>
    <aside
      class="c-dXzGmz c-dXzGmz-dpIRHz-variant-info"
    >
      <div
        class="c-jBmcOA c-jBmcOA-jXIqcX-variant-info"
      >
        <svg
          class="c-PJLV c-PJLV-bHjGOQ-variant-default c-PJLV-hKgDZV-outline-true c-PJLV-jnsSHc-size-5"
          fill="none"
          height="22"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Info
          </title>
          <desc>
            An icon representing the letter ‘i‘ in a circle
          </desc>
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="8"
            y2="8"
          />
        </svg>
      </div>
      Test
    </aside>
  </div>
</body>
`;

exports[`Callout can render a Callout with variant info 2`] = `
<body>
  <div>
    <aside
      class="c-dXzGmz c-dXzGmz-dpIRHz-variant-info"
    >
      <div
        class="c-dxxjkH c-dxxjkH-jXIqcX-variant-info"
      >
        Test Label
      </div>
      Test
    </aside>
  </div>
</body>
`;
